tests/ui/static/gc/fsa/references_nested.stderr
error: The drop method for `HasNestedRef<'_>` cannot be safely finalized.
  --> $DIR/references_nested.rs:37:13
   |
LL |         use_val(self.a); // should fail
   |                 ------
   |                 |
   |                 a finalizer cannot safely dereference this `&u64`
   |                 because it might not live long enough.
...
LL |     Gc::new(HasNestedRef::default());
   |     --------^^^^^^^^^^^^^^^^^^^^^^^- caused by trying to construct a `Gc<HasNestedRef<'_>>` here.
   |
   = help: `Gc` may run finalizers after the valid lifetime of this reference.

error: The drop method for `HasNestedRef<'_>` cannot be safely finalized.
  --> $DIR/references_nested.rs:37:13
   |
LL |         use_val(self.c.a); // should fail
   |                 --------
   |                 |
   |                 a finalizer cannot safely dereference this `&u64`
   |                 because it might not live long enough.
...
LL |     Gc::new(HasNestedRef::default());
   |     --------^^^^^^^^^^^^^^^^^^^^^^^- caused by trying to construct a `Gc<HasNestedRef<'_>>` here.
   |
   = help: `Gc` may run finalizers after the valid lifetime of this reference.

error: The drop method for `HasNestedRef<'_>` cannot be safely finalized.
  --> $DIR/references_nested.rs:37:13
   |
LL |         let a = self.a; // should fail
   |                 ------
   |                 |
   |                 a finalizer cannot safely dereference this `&u64`
   |                 because it might not live long enough.
...
LL |     Gc::new(HasNestedRef::default());
   |     --------^^^^^^^^^^^^^^^^^^^^^^^- caused by trying to construct a `Gc<HasNestedRef<'_>>` here.
   |
   = help: `Gc` may run finalizers after the valid lifetime of this reference.

error: The drop method for `HasNestedRef<'_>` cannot be safely finalized.
  --> $DIR/references_nested.rs:37:13
   |
LL |         let ca = self.a; // should fail
   |                  ------
   |                  |
   |                  a finalizer cannot safely dereference this `&u64`
   |                  because it might not live long enough.
...
LL |     Gc::new(HasNestedRef::default());
   |     --------^^^^^^^^^^^^^^^^^^^^^^^- caused by trying to construct a `Gc<HasNestedRef<'_>>` here.
   |
   = help: `Gc` may run finalizers after the valid lifetime of this reference.

error: The drop method for `HasNestedRef<'_>` cannot be safely finalized.
  --> $DIR/references_nested.rs:37:13
   |
LL |         use_val(e.a);
   |                 ---
   |                 |
   |                 a finalizer cannot safely dereference this `&u64`
   |                 because it might not live long enough.
...
LL |     Gc::new(HasNestedRef::default());
   |     --------^^^^^^^^^^^^^^^^^^^^^^^- caused by trying to construct a `Gc<HasNestedRef<'_>>` here.
   |
   = help: `Gc` may run finalizers after the valid lifetime of this reference.

error: aborting due to 5 previous errors

